// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LedgerReview > should render for unvote and vote transaction 1`] = `
<div>
  <div
    class="flex items-center py-4 space-x-4 sm:py-6 no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Unvote
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="flex-1 -my-2"
        >
          <div
            class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="inline-flex relative justify-center items-center w-8 h-8 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
              data-testid="Avatar"
            >
              <div
                class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
              >
                <img
                  alt="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
                  src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23EF7C6D%22%2F%3E%3C%2Fsvg%3E"
                  title="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
                />
              </div>
            </div>
            <div
              class="flex-1 ml-4 w-28"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Test Username
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex items-center py-4 space-x-4 border-t border-dashed sm:py-6 border-theme-secondary-300 no-ligatures dark:border-theme-secondary-800"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Vote
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="flex-1 -my-2"
        >
          <div
            class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="inline-flex relative justify-center items-center w-8 h-8 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
              data-testid="Avatar"
            >
              <div
                class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
              >
                <img
                  alt="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
                  src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23EF7C6D%22%2F%3E%3C%2Fsvg%3E"
                  title="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
                />
              </div>
            </div>
            <div
              class="flex-1 ml-4 w-28"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Test Username
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mt-2"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="py-2 px-3 border-l-2 sm:p-0 sm:bg-transparent sm:border-none dark:bg-black border-x-theme-primary-400 bg-theme-secondary-100 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="font-semibold leading-5 no-ligatures text-theme-secondary-700 min-w-24 text-md dark:text-theme-secondary-500"
          data-testid="DetailLabelText"
        >
          Transaction Summary
        </div>
      </div>
      <div
        class="overflow-hidden mt-0 rounded-xl sm:mt-2 sm:border border-theme-secondary-300 dark:border-theme-dark-700"
      >
        <div
          class="p-3 w-full break-words sm:py-5 sm:px-6 sm:in-[.condensed]:py-4"
        >
          <div
            class="flex flex-col gap-3"
          >
            <div
              class="flex justify-between items-center space-x-2 sm:justify-start sm:space-x-0"
              data-testid="AmountSection"
            >
              <div
                class="w-auto text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 shrink-0 leading-[17px] sm:min-w-36 dark:text-theme-secondary-500"
              >
                Amount
              </div>
              <div
                class="flex flex-row gap-2 items-center"
              >
                <span
                  class="font-semibold whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </div>
            </div>
            <div
              class="flex justify-between items-center space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="w-auto text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 shrink-0 leading-[17px] sm:min-w-36 dark:text-theme-secondary-500"
              >
                Fee
              </div>
              <div
                class="flex flex-row gap-2 items-center"
              >
                <span
                  class="font-semibold whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </div>
            </div>
            <div
              class="flex justify-between items-center space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="w-auto text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 shrink-0 leading-[17px] sm:min-w-36 dark:text-theme-secondary-500"
              >
                Total
              </div>
              <div
                class="flex flex-row gap-2 items-center"
              >
                <span
                  class="font-semibold whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex flex-col py-3 px-6 w-full bg-theme-secondary-300 dark:bg-theme-secondary-800"
        >
          <div
            class="flex justify-between items-center space-x-2 sm:justify-start sm:space-x-0"
          >
            <div
              class="no-ligatures text-theme-secondary-700 dark:text-theme-secondary-500 shrink-0 text-sm leading-[17px] font-semibold w-auto leading-4! sm:min-w-36 sm:text-sm"
            >
              Confirmation Time
            </div>
            <div
              class="flex flex-row items-center gap-2 leading-4! lowercase sm:text-sm"
            >
              ~10s
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LedgerReview > should render for unvote transaction 1`] = `
<div>
  <div
    class="flex items-center py-4 space-x-4 sm:py-6 no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Unvote
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="flex-1 -my-2"
        >
          <div
            class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="inline-flex relative justify-center items-center w-8 h-8 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
              data-testid="Avatar"
            >
              <div
                class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
              >
                <img
                  alt="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
                  src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23EF7C6D%22%2F%3E%3C%2Fsvg%3E"
                  title="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
                />
              </div>
            </div>
            <div
              class="flex-1 ml-4 w-28"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Test Username
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mt-2"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="py-2 px-3 border-l-2 sm:p-0 sm:bg-transparent sm:border-none dark:bg-black border-x-theme-primary-400 bg-theme-secondary-100 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="font-semibold leading-5 no-ligatures text-theme-secondary-700 min-w-24 text-md dark:text-theme-secondary-500"
          data-testid="DetailLabelText"
        >
          Transaction Summary
        </div>
      </div>
      <div
        class="overflow-hidden mt-0 rounded-xl sm:mt-2 sm:border border-theme-secondary-300 dark:border-theme-dark-700"
      >
        <div
          class="p-3 w-full break-words sm:py-5 sm:px-6 sm:in-[.condensed]:py-4"
        >
          <div
            class="flex flex-col gap-3"
          >
            <div
              class="flex justify-between items-center space-x-2 sm:justify-start sm:space-x-0"
              data-testid="AmountSection"
            >
              <div
                class="w-auto text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 shrink-0 leading-[17px] sm:min-w-36 dark:text-theme-secondary-500"
              >
                Amount
              </div>
              <div
                class="flex flex-row gap-2 items-center"
              >
                <span
                  class="font-semibold whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </div>
            </div>
            <div
              class="flex justify-between items-center space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="w-auto text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 shrink-0 leading-[17px] sm:min-w-36 dark:text-theme-secondary-500"
              >
                Fee
              </div>
              <div
                class="flex flex-row gap-2 items-center"
              >
                <span
                  class="font-semibold whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </div>
            </div>
            <div
              class="flex justify-between items-center space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="w-auto text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 shrink-0 leading-[17px] sm:min-w-36 dark:text-theme-secondary-500"
              >
                Total
              </div>
              <div
                class="flex flex-row gap-2 items-center"
              >
                <span
                  class="font-semibold whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex flex-col py-3 px-6 w-full bg-theme-secondary-300 dark:bg-theme-secondary-800"
        >
          <div
            class="flex justify-between items-center space-x-2 sm:justify-start sm:space-x-0"
          >
            <div
              class="no-ligatures text-theme-secondary-700 dark:text-theme-secondary-500 shrink-0 text-sm leading-[17px] font-semibold w-auto leading-4! sm:min-w-36 sm:text-sm"
            >
              Confirmation Time
            </div>
            <div
              class="flex flex-row items-center gap-2 leading-4! lowercase sm:text-sm"
            >
              ~10s
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LedgerReview > should render for vote transaction 1`] = `
<div>
  <div
    class="flex items-center py-4 space-x-4 sm:py-6 no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="text-sm font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Vote
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="flex-1 -my-2"
        >
          <div
            class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="inline-flex relative justify-center items-center w-8 h-8 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
              data-testid="Avatar"
            >
              <div
                class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
              >
                <img
                  alt="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
                  src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23EF7C6D%22%2F%3E%3C%2Fsvg%3E"
                  title="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
                />
              </div>
            </div>
            <div
              class="flex-1 ml-4 w-28"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Test Username
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mt-2"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="py-2 px-3 border-l-2 sm:p-0 sm:bg-transparent sm:border-none dark:bg-black border-x-theme-primary-400 bg-theme-secondary-100 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="font-semibold leading-5 no-ligatures text-theme-secondary-700 min-w-24 text-md dark:text-theme-secondary-500"
          data-testid="DetailLabelText"
        >
          Transaction Summary
        </div>
      </div>
      <div
        class="overflow-hidden mt-0 rounded-xl sm:mt-2 sm:border border-theme-secondary-300 dark:border-theme-dark-700"
      >
        <div
          class="p-3 w-full break-words sm:py-5 sm:px-6 sm:in-[.condensed]:py-4"
        >
          <div
            class="flex flex-col gap-3"
          >
            <div
              class="flex justify-between items-center space-x-2 sm:justify-start sm:space-x-0"
              data-testid="AmountSection"
            >
              <div
                class="w-auto text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 shrink-0 leading-[17px] sm:min-w-36 dark:text-theme-secondary-500"
              >
                Amount
              </div>
              <div
                class="flex flex-row gap-2 items-center"
              >
                <span
                  class="font-semibold whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </div>
            </div>
            <div
              class="flex justify-between items-center space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="w-auto text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 shrink-0 leading-[17px] sm:min-w-36 dark:text-theme-secondary-500"
              >
                Fee
              </div>
              <div
                class="flex flex-row gap-2 items-center"
              >
                <span
                  class="font-semibold whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </div>
            </div>
            <div
              class="flex justify-between items-center space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="w-auto text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 shrink-0 leading-[17px] sm:min-w-36 dark:text-theme-secondary-500"
              >
                Total
              </div>
              <div
                class="flex flex-row gap-2 items-center"
              >
                <span
                  class="font-semibold whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex flex-col py-3 px-6 w-full bg-theme-secondary-300 dark:bg-theme-secondary-800"
        >
          <div
            class="flex justify-between items-center space-x-2 sm:justify-start sm:space-x-0"
          >
            <div
              class="no-ligatures text-theme-secondary-700 dark:text-theme-secondary-500 shrink-0 text-sm leading-[17px] font-semibold w-auto leading-4! sm:min-w-36 sm:text-sm"
            >
              Confirmation Time
            </div>
            <div
              class="flex flex-row items-center gap-2 leading-4! lowercase sm:text-sm"
            >
              ~10s
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
